<resources xmlns:xliff="urn:oasis:names:tc:xliff:document:1.2">
    <string name="app_name">Multishot Camera</string>

    <!-- keys for settings NO TRANSLATION -->
    <string name="cat_camera"><xliff:g id="preference_key">camera</xliff:g></string>
    <string name="grid"><xliff:g id="preference_key">grid</xliff:g></string>
    <string name="level"><xliff:g id="preference_key">level</xliff:g></string>
    <string name="shutter_sound"><xliff:g id="preference_key">shutter_sound</xliff:g></string>
    <string name="pictureSize"><xliff:g id="preference_key">pictureSize</xliff:g></string>
    <string name="evSequence"><xliff:g id="preference_key">evSequence</xliff:g></string>
    <string name="cat_hdr"><xliff:g id="preference_key">hdrProcess</xliff:g></string>
    <string name="hdr"><xliff:g id="preference_key">hdr</xliff:g></string>
    <string name="notifyHdr"><xliff:g id="preference_key">notifyHdr</xliff:g></string>
    <string name="align"><xliff:g id="preference_key">align</xliff:g></string>

    <!-- keys for settings NO TRANSLATION -->

    <string name="picture">Picture</string>
    <string name="description_info">Info</string>
    <string name="request_camera_permission">This app needs camera permission.</string>
    <string name="request_write_permission">This app needs write permission to save images.</string>
    <string name="camera_error">This device doesn\'t support Camera2 API.</string>
    <string name="opencv_alert_title">OpenCV Manager</string>
    <string name="opencv_alert_message">
        <![CDATA[

            OpenCV Manager is needed for some features of this app. Do you want to install it now?

        ]]>
    </string>
    <string name="camera">Camera</string>
    <string name="shutter">Shutter</string>
    <string name="ac_settings">Settings</string>

    <string name="EXPOSURE_MERGE">exposureMerge</string>
    <string name="MERGED">merged</string>

    <string name="title_merge_process">Image Merge Process</string>

    <string name="no_storage">Unable to save image! The storage is not present.</string>
    <string name="photos_saved" formatted="false">%s photos saved to %s.</string>
    <string name="fusion_saved" formatted="false">Processed image saved in %s</string>

    <string name="prefs_grid_enabled_description">Show a 3x3 grid on the preview.</string>
    <string name="prefs_grid_enabled_title">Show Grid</string>
    <string name="prefs_level_enabled_description">Show a horizontal level on the preview.</string>
    <string name="prefs_level_enabled_title">Show Horizontal Level</string>
    <string name="prefs_shutter_sound_enabled_description">Enables shutter sound when checked.</string>
    <string name="prefs_shutter_sound_enabled_title">Shutter Sound</string>
    <string name="prefs_process_hdr_title">HDR Processing</string>
    <string name="prefs_hdr_enabled_description">Create a HDR image from the taken sequence. Note: it requires an extra library which will be downloaded if not present.</string>
    <string name="prefs_hdr_enabled_title">Create HDR</string>
    <string name="prefs_broadcast_hdr_enabled_title">System message for HDR process</string>
    <string name="prefs_broadcast_hdr_enabled_description">The HDR service will send a general system notification when done.</string>
    <string name="prefs_picture_size_description">Set the size for the images.</string>
    <string name="prefs_picture_size_title">Picture Size</string>
    <string name="prefs_exposure_description">Set the sequence of exposure values.</string>
    <string name="prefs_exposure_title">Exposure Values</string>
    <string name="prefs_align_description">Align the images before merging.</string>
    <string name="prefs_align_title">Align</string>

</resources>