<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
                android:orientation="vertical"
                android:layout_width="match_parent"
                android:layout_height="match_parent">

    <!-- top -->
    <GridLayout
        android:id="@+id/top"
        android:layout_width="match_parent"
        android:layout_height="30dp"
        android:layout_alignParentTop="true"
        android:columnCount="2"
        android:rowCount="1"
        android:background="#000">

        <ProgressBar
            android:id="@+id/progressBar"
            style="?android:attr/progressBarStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:visibility="gone"/>

        <ImageButton
            android:id="@+id/info"
            style="@style/ButtonStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="end"
            android:contentDescription="@string/description_info"
            android:src="@drawable/ic_action_info"/>

    </GridLayout>


    <!-- center -->
    <FrameLayout
        android:id="@+id/preview"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_above="@+id/control"
        android:layout_below="@+id/top"
        android:background="@android:color/black"
        android:paddingTop="3dp">

        <TextureView
            android:id="@+id/texture"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

        <de.mario.camera.view.GridView
            android:id="@+id/grid"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>

        <de.mario.camera.view.LevelView
            android:id="@+id/level"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>

    </FrameLayout>


    <!-- bottom -->
    <FrameLayout
        android:id="@+id/control"
        android:layout_width="match_parent"
        android:layout_height="80dp"
        android:layout_alignParentBottom="true"
        android:layout_alignParentStart="true"
        android:background="#000">

        <ImageButton
            android:id="@+id/picture"
            style="@style/ButtonStyle"
            android:layout_width="60dp"
            android:layout_height="60dp"
            android:layout_gravity="center"
            android:src="@drawable/shutter"
            android:text="@string/picture"/>

        <ImageButton
            android:id="@+id/settings"
            style="@style/ButtonStyle"
            android:layout_width="38dp"
            android:layout_height="38dp"
            android:layout_gravity="center_vertical|right"
            android:layout_marginRight="5dip"
            android:src="@drawable/ic_settings"
            android:text="@string/ac_settings"/>

    </FrameLayout>

</RelativeLayout>
